# cloudsmith-cs-interview-candidate

./: README.md  pyproject.toml
.github/workflows/: build_package.yml  build_package.yml_with_outputs  promote-on-sync.yml  promote-on-webhook.yml  promote_package.yml  promote_package.yml_with_manual_trigger  release_package.yml
